@@ -3,38 +3,44 @@ package edu.stanford.protege.webprotege.forms.field;
 import com.google.common.collect.ImmutableList;
 import edu.stanford.protege.webprotege.forms.data.LiteralFormControlData;
 import edu.stanford.protege.webprotege.common.LanguageMap;
+import edu.stanford.protege.webprotege.jackson.WebProtegeJacksonApplication;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.json.*;
+import org.springframework.boot.test.json.JacksonTester;
+import org.springframework.context.annotation.Import;
 
 import java.io.IOException;
+import java.util.List;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * Matthew Horridge
  * Stanford Center for Biomedical Informatics Research
  * 2020-01-08
  */
+@JsonTest
+@AutoConfigureJsonTesters
+@Import(WebProtegeJacksonApplication.class)
 public class MultiChoiceControlDescriptor_Serialization_TestCase {
 
-    private ImmutableList<ChoiceDescriptor> choices;
+    @Autowired
+    private JacksonTester<MultiChoiceControlDescriptor> tester;
 
     @BeforeEach
     public void setUp() {
-        choices = ImmutableList.of(
-//                ChoiceDescriptor.choice(LanguageMap.empty(),
-//                                        LiteralFormControlData.get(DataFactory.getOWLLiteral("A"))),
-//                ChoiceDescriptor.choice(LanguageMap.empty(),
-//                                        LiteralFormControlData.get(DataFactory.getOWLLiteral("B")))
-        );
+
     }
 
     @Test
     public void shouldSerialize_AnnotationComponentCriteria() throws IOException {
-        testSerialization(
-                MultiChoiceControlDescriptor.get(FixedChoiceListSourceDescriptor.get(choices), ImmutableList.of())
-        );
+        var descriptor = MultiChoiceControlDescriptor.get(FixedChoiceListSourceDescriptor.get(List.of()), ImmutableList.of());
+        var written = tester.write(descriptor);
+        System.out.println(written.getJson());
+        assertThat(written).hasJsonPathMapValue("choicesSource");
+        assertThat(written).hasJsonPathArrayValue("defaultChoice");
     }
 
-    private static <V extends MultiChoiceControlDescriptor> void testSerialization(V value) throws IOException {
-//        JsonSerializationTestUtil.testSerialization(value, MultiChoiceControlDescriptor.class);
-    }
 }
